@@ -10784,6 +10784,9 @@ copy of \kbd{x}. (The name comes from \kbd{RgV\_isscalar}.)
 \fun{GEN}{scalarmat_shallow}{GEN x, long n} creates an $n\times n$
 scalar matrix whose diagonal is set to shallow copies of the scalar \kbd{x}.
 
+\fun{GEN}{RgX_sylvestermatrix}{GEN f, GEN g} return the Sylvester matrix
+attached to the two \typ{POL} in the same variable $f$ and $g$.
+
 \fun{GEN}{diagonal_shallow}{GEN x} returns a diagonal matrix whose diagonal
 is given by the vector $x$. Shallow function.
 
